intTests/test_parse_errors/parser012.log.good
Loading file "parser012.saw"
parser012.saw:3:29-3:30: Error: Syntax error: missing ')'
FAILED
