intTests/test_parse_errors/parser012.saw
// another less trivial example with a missing close-paren

import "foo.cry" as foo (bar;
enable_experimental;
